2010-01-09  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	Move documentation from *.h to *.c, so libthai developers have the doc
	at hand. Users can still read the doxygen-generated doc BTW.

	* include/thai/*.h, src/*/*.c: Move doc comments from *.h to *.c.
	* doc/Doxyfile.in: Set INPUT to @top_srcdir@.

2010-01-08  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* data/tdict-{proper,common,geo}.txt: Add words.

2010-01-08  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* src/thbrk/brk-maximal.c (brk_shot_init):
	Return failure/success status.
	* src/thbrk/brk-maximal.c (brk_pool_node_new):
	Check & handle return code from brk_shot_init().

2010-01-08  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* src/thwbrk/thwbrk.c (th_wbrk, th_wbrk_line):
	Rewritten, for harmony with the rests of the source, plus potential
	integer overflow vulnerability removed.

2010-01-08  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	Fix potential integer overflow vulnerabilities.
	Thanks Tim Starling <tstarling@wikimedia.org> for pointing out.

	* src/thbrk/thbrk.c (th_brk_line): Return zero if malloc size overflows
	or malloc fails.
	* src/thbrk/brk-maximal.c (best_brk_new): Return NULL if malloc size
	overflows.

2009-08-22  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* configure.in: Post-release version suffix added.

	* data/tdict-std-compound.txt: Remove loose compounds.
	* data/tdict-{ict,district,proper,common,science,lang-ethnic,geo}.txt:
	Add words.

2009-06-18  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* configure.in: Bump library revision.

	* configure.in, NEWS:
	=== Version 0.1.12 ===

2009-06-18  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* data/tdict-std-compound.txt: Remove loose compounds.

2009-06-18  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* data/tdict-std-compound.txt: Remove loose compounds.
	* data/tdict-{ict,district,proper,common,science,geo}.txt: Add words.
